test/library/standard/Sort/errors/error-multiple-interfaces.2.good
error-multiple-interfaces.chpl:27: error: The comparator R2 should only implement one sort comparator interface.
